<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/playconst"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/exitdialog_shape"
        android:backgroundTint="@color/white"
        android:paddingVertical="@dimen/_15sdp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/img_exit_dialog"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_50sdp"
            android:gravity="center"
            android:text="@string/quit_app"
            android:textColor="@color/exitdialog_textcolor"
            android:textSize="@dimen/_16sdp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />
        <com.facebook.shimmer.ShimmerFrameLayout
            android:id="@+id/musicDetailsShimmer"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:visibility="gone"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">
            <RelativeLayout
                android:id="@+id/bannerAdexit"
                android:layout_width="match_parent"
                android:layout_height="@dimen/_220sdp"
                android:background="@drawable/background_dialog"
                android:gravity="center"
                android:visibility="invisible"
                android:layout_marginHorizontal="@dimen/_5sdp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />
        </com.facebook.shimmer.ShimmerFrameLayout>

        <TextView
            android:id="@+id/hint_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/you_re_leaving_are_you_sure_you_want_nto_quit_app"
            android:textColor="@color/exitdialog_greycolor"
            android:textSize="@dimen/_15sdp"
            android:layout_marginTop="@dimen/_10sdp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/musicDetailsShimmer" />

        <TextView
            android:id="@+id/exit_label_no"
            android:layout_width="@dimen/_70sdp"
            android:layout_height="wrap_content"
            android:background="@drawable/exitdialog_no_shape"
            android:gravity="center"
            android:paddingStart="@dimen/_10sdp"
            android:paddingTop="@dimen/_4sdp"
            android:paddingEnd="@dimen/_10sdp"
            android:paddingBottom="@dimen/_4sdp"
            android:text="@string/no"
            android:textColor="@color/exitdialog_textcolor"
            android:textSize="@dimen/_15sdp"
            app:layout_constraintBottom_toBottomOf="@+id/exit_label_yes"
            app:layout_constraintEnd_toStartOf="@+id/exit_label_yes"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintHorizontal_chainStyle="spread"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/exit_label_yes" />

        <TextView
            android:id="@+id/exit_label_yes"
            android:layout_width="@dimen/_70sdp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/_20sdp"
            android:background="@drawable/exitdialog_yes"
            android:gravity="center"
            android:paddingStart="@dimen/_10sdp"
            android:paddingTop="@dimen/_4sdp"
            android:paddingEnd="@dimen/_10sdp"
            android:paddingBottom="@dimen/_4sdp"
            android:text="@string/yes"
            android:textColor="@color/white"
            android:textSize="@dimen/_15sdp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/exit_label_no"
            app:layout_constraintTop_toBottomOf="@+id/hint_text" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/exit_icon"
        android:layout_marginTop="@dimen/_20sdp"
        app:layout_constraintEnd_toEndOf="@+id/playconst"
        app:layout_constraintStart_toStartOf="@+id/playconst"
        app:layout_constraintTop_toTopOf="@+id/playconst" />
</androidx.constraintlayout.widget.ConstraintLayout>