<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/scedhuleing_bg"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context="com.example.baseapp.fragments.CustomFragment.customCallFragment.CustomCallFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
    android:id="@+id/customringtoneconst"
    android:layout_width="@dimen/_130sdp"
    android:layout_height="0dp"
    app:layout_constraintHeight_percent="0.3"
    android:layout_marginTop="@dimen/_4sdp"
    android:layout_marginStart="@dimen/_10sdp"

    android:background="@drawable/rounded_white_shape"
    android:foreground="@drawable/ripple"
    app:layout_constraintBottom_toTopOf="@+id/customscheduleconst"

    app:layout_constraintHorizontal_chainStyle="spread"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toTopOf="parent"
    app:layout_constraintVertical_chainStyle="packed">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        app:layout_constraintHeight_percent="0.5"
        android:layout_marginStart="@dimen/_10sdp"

        android:src="@drawable/ic_ringtone"
        app:layout_constraintBottom_toTopOf="@+id/textView23"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_chainStyle="packed" />

    <TextView
        android:id="@+id/textView23"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/_8sdp"
        android:layout_marginTop="@dimen/_8sdp"
        android:fontFamily="@font/monseratt_med"
        android:text="@string/ringtone"
        android:textColor="@color/black"
        android:textSize="@dimen/_12sdp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView" />


    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
    android:id="@+id/customthemesconst"
    android:layout_width="@dimen/_130sdp"
    android:layout_height="0dp"
    android:background="@drawable/rounded_white_shape"
    android:foreground="@drawable/ripple"
    app:layout_constraintBottom_toBottomOf="@+id/customringtoneconst"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintHeight_percent="0.3"
    app:layout_constraintStart_toEndOf="@+id/customringtoneconst"
    app:layout_constraintTop_toTopOf="@+id/customringtoneconst">

    <ImageView
        android:id="@+id/themesimageView"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        app:layout_constraintHeight_percent="0.5"
        android:layout_marginStart="@dimen/_10sdp"
        android:src="@drawable/ic_themes"
        app:layout_constraintBottom_toTopOf="@+id/textView25"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_chainStyle="packed" />

    <TextView
        android:id="@+id/textView25"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/_8sdp"
        android:layout_marginTop="@dimen/_8sdp"
        android:fontFamily="@font/monseratt_med"
        android:text="@string/theme"
        android:textColor="@color/black"
        android:textSize="@dimen/_12sdp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/themesimageView" />


    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
    android:id="@+id/customscheduleconst"
    android:layout_width="@dimen/_130sdp"
    android:layout_height="0dp"
    android:layout_marginStart="@dimen/_10sdp"
    android:layout_marginTop="@dimen/_8sdp"
    android:background="@drawable/rounded_white_shape"
    android:foreground="@drawable/ripple"
    app:layout_constraintBottom_toTopOf="@+id/customschedulenbtn"
    app:layout_constraintHeight_percent="0.3"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toBottomOf="@+id/customringtoneconst">

    <ImageView
        android:id="@+id/scheduleimageView"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        app:layout_constraintHeight_percent="0.5"
        android:layout_marginStart="@dimen/_10sdp"
        android:src="@drawable/ic_schedule"
        app:layout_constraintBottom_toTopOf="@+id/textView28"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_chainStyle="packed" />

    <TextView
        android:id="@+id/textView28"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/_8sdp"
        android:layout_marginTop="@dimen/_8sdp"
        android:fontFamily="@font/monseratt_med"
        android:text="@string/scedhule"
        android:textColor="@color/black"
        android:textSize="@dimen/_12sdp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/scheduleimageView" />


    </androidx.constraintlayout.widget.ConstraintLayout>

    <com.google.android.material.button.MaterialButton
    android:id="@+id/customschedulenbtn"
    android:layout_width="@dimen/_250sdp"
    android:layout_height="0dp"
    android:layout_marginTop="@dimen/_10sdp"
    android:backgroundTint="@color/scedhuleing_btn"
    android:fontFamily="@font/monseratt_med"
    android:text="@string/scedhule_btn"
    android:textAllCaps="false"
    android:textAppearance="?attr/textAppearanceBody1"
    android:textColor="#FFFFFF"
    android:textSize="@dimen/_13sdp"
    app:cornerRadius="@dimen/_30sdp"
    app:layout_constraintBottom_toBottomOf="parent"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintHeight_percent="0.15"
    app:layout_constraintHorizontal_bias="0.5"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toBottomOf="@+id/customscheduleconst" />


</androidx.constraintlayout.widget.ConstraintLayout>
