<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".tutorialActivity.TutorialActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/addtohomemainhead"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_40sdp"
            android:gravity="center"
            android:text="@string/addtohomemainheading"
            android:textColor="@color/tutorial_text"
            android:textSize="@dimen/_20sdp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <androidx.viewpager.widget.ViewPager
            android:id="@+id/tutviewPager"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_300sdp"
            android:layout_marginTop="@dimen/_10sdp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/addtohomemainhead" />

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginTop="@dimen/_20sdp"
            android:gravity="center"
            android:orientation="horizontal"
            app:layout_constraintBottom_toTopOf="@+id/continuenbtn"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tutviewPager">

            <View
                android:id="@+id/viewPg1"
                android:layout_width="@dimen/_16sdp"
                android:layout_height="@dimen/_4sdp"
                android:layout_gravity="center"
                android:layout_marginStart="@dimen/_4sdp"
                android:background="@drawable/view_selected" />

            <View
                android:id="@+id/viewPg2"
                android:layout_width="@dimen/_16sdp"
                android:layout_height="@dimen/_4sdp"
                android:layout_gravity="center"
                android:layout_marginStart="@dimen/_4sdp"
                android:background="@drawable/view_unselected" />

            <View
                android:id="@+id/viewPg3"
                android:layout_width="@dimen/_16sdp"
                android:layout_height="@dimen/_4sdp"
                android:layout_gravity="center"
                android:layout_marginStart="@dimen/_4sdp"
                android:background="@drawable/view_unselected" />


        </LinearLayout>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/continuenbtn"
            android:layout_width="@dimen/_100sdp"
            android:layout_height="@dimen/_50sdp"
            android:layout_marginBottom="@dimen/_10sdp"
            android:backgroundTint="@color/tutorial_text"
            android:text="@string/continuenbutton"
            android:textAllCaps="false"
            android:textAppearance="?attr/textAppearanceBody1"
            android:textColor="#FFFFFF"
            android:textSize="@dimen/_13sdp"
            app:cornerRadius="@dimen/_20sdp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/skipbtn"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/skipbtn"
            android:layout_width="@dimen/_100sdp"
            android:layout_height="@dimen/_50sdp"
            android:layout_marginBottom="@dimen/_10sdp"
            android:backgroundTint="@color/tutorial_text"
            android:text="@string/skipnbutton"
            android:textAllCaps="false"
            android:textAppearance="?attr/textAppearanceBody1"
            android:textColor="#FFFFFF"
            android:textSize="@dimen/_13sdp"
            app:cornerRadius="@dimen/_20sdp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/continuenbtn" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.constraintlayout.widget.ConstraintLayout>